[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/DuelScene.gd" type="Script" id=1]

[node name="DuelScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterBoard" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75

[node name="LabelCurrent" type="Label" parent="CenterBoard"]
margin_right = 512.0
margin_bottom = 14.0
text = "Phase: ?"

[node name="LogPanel" type="RichTextLabel" parent="CenterBoard"]
margin_top = 18.0
margin_right = 512.0
margin_bottom = 218.0
rect_min_size = Vector2( 400, 200 )

[node name="ButtonEndTurn" type="Button" parent="CenterBoard"]
margin_top = 222.0
margin_right = 512.0
margin_bottom = 242.0
text = "End Turn"

[node name="Hand" type="HBoxContainer" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
